Scénario 4 : Affichage d'un post OK

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,8 @@
 
 <ul>  
 <% @posts.each do |post| %> 
-  <li><%= post.title %></li><%= link_to 'Delete', post, :confirm=>"Delete this post ?", method: :delete %>
+  <li><%= post.title %> <%= link_to 'Delete', post, :confirm=>"Delete this post ?", method: :delete %>
+											  <%= link_to 'Show', post_path(post.id) %></li>
 <% end %>
 </ul>
 
