Scénario 5 : Edition d'un post OK

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>New post</h1>
+<h1>Edit post</h1>
 
-	<%= form_tag("/posts", :method => "post") do %>
+	<%= form_tag("/posts/#{@post.id}", :method => "put") do %>
 	<%= label(:post, :title, "Title :") %>
 	<%= text_field(:post, :title) %>
 	<%= label(:post, :body, "Body :") %>
 	<%= text_area(:post, :body) %>
-	<%= submit_tag("Create") %>
+	<%= submit_tag("Update") %>
 
 <% end %>
