Scénario 6 : Listing des commentaires OK

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,9 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.body %><p>
 <br />
+
+<% @post.comments.all.each do |comment| %>
+	<li><%= comment.writer %> <%= comment.body %></li>
+<% end %>
+
 <%= link_to 'Index', posts_path %>
