--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,22 @@
 <p><%= @post.body %><p>
 <br />
 
+
 <% @post.comments.all.each do |comment| %>
-	<li><%= comment.writer %> <%= comment.body %></li>
+	<li><%= comment.writer %> <br /> <%= comment.body %></li> <br /> 
 <% end %>
+
+
+<%= form_tag("/posts/#{@post.id}/comments", :method => "post") do %>
+<%= label(:comment, :writer, "Writer :") %>
+<%= text_field(:comment, :writer) %>
+<br/>
+<%= label(:comment, :body, "Body :") %>
+<br/>
+<%= text_area(:comment, :body) %>
+<br/>
+<%= submit_tag("Add a comment") %>
+<% end %>
+
 
 <%= link_to 'Index', posts_path %>
